# gen-lsp

./: .gitignore  Cargo.toml  devenv.nix  flake.nix  test.py
src/: indexer.rs  lsp_server.rs  main.rs
