[package]
name = "gen-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.23.0"
clap = { version = "4.3", features = ["derive"] }
tower-lsp = "0.19"
tokio = { version = "1.28", features = ["full"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
anyhow = "1.0"
serde_json = "1.0"
async-trait = "0.1"
